--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -20,7 +20,8 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "AutoMapper": "4.2.1"
+    "AutoMapper": "4.2.1",
+    "System.Threading.Tasks": "4.0.11"
   },
 
   "tools": {
