Use of bingmaps service to get long/lat of a given place

--- a/src/TheWorld/config.json
+++ b/src/TheWorld/config.json
@@ -4,5 +4,8 @@
   },
   "ConnectionStrings": {
     "WorldContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+  "keys": {
+    "BingKey" :  "DONOTPUTTHEKEYHERE_INSTEADUSETHEMACHINEREGISTRY"
   }
 }
