--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -21,7 +21,8 @@
       "type": "build"
     },
     "AutoMapper": "4.2.1",
-    "System.Threading.Tasks": "4.0.11"
+    "System.Threading.Tasks": "4.0.11",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
   },
 
   "tools": {
