--- a/src/TheWorld/project.json
+++ b/src/TheWorld/project.json
@@ -53,11 +53,15 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "Views",
+      "config.json"
     ]
   },
 
   "scripts": {
+    "prepublish": [ "npm install" , "bower install" ],
+    "prepare": "gulp minify",
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
